use .toList()